--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
     "alembic (>=1.16.5,<2.0.0)",
-    "pytest (>=8.4.1,<9.0.0)"
+    "pytest (>=8.4.1,<9.0.0)",
+    "uvicorn (>=0.35.0,<0.36.0)"
 ]
 
 
