--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "alembic (>=1.16.5,<2.0.0)",
     "pytest (>=8.4.1,<9.0.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
-    "orjson (>=3.11.3,<4.0.0)"
+    "orjson (>=3.11.3,<4.0.0)",
+    "pytest-asyncio (>=1.1.0,<2.0.0)"
 ]
 
 
